# atac_rna_data_processing

./: MANIFEST.in  README.md  pyproject.toml
atac_rna_data_processing/io/: causal_lib.py  celltype.py
test/: test_sequence.py
