[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atac_rna_data_processing"
version = "1.0.0"
description = "A simple Python project"
authors = [
    {name = "Xi Fu", email = "fu.xi@columbia.edu"}
]
requires-python = ">=3.10"

[tool.setuptools.packages]
find = {}

[tool.setuptools.packages.find]
where = ["."]
include = ["atac_rna_data_processing*"]
namespaces = false

[tool.setuptools.package-data]
"atac_rna_data_processing" = ["data/*.pkl", "data/gencode.v40.hg38.feather"]
