[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atac_rna_data_processing"
version = "1.0.0"
description = "A simple Python project"
authors = [
    {name = "Xi Fu", email = "fu.xi@columbia.edu"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyranges",
    "scipy",
    "PyYAML",
    "zarr",
    "numcodecs",
    "pyBigWig",
    "matplotlib",
    "networkx",
    "plotly",
    "seaborn",
    "tqdm",
    "cdt",
    "pysam",
    "requests",
    "seqlogo",
    "MOODS-python",
    "urllib3",
    "pyliftover",
    "biopython",
    "gprofiler",
    "pyfaidx"
]

[tool.setuptools.packages.find]
where = ["."]  # Start looking for packages inside the root folder
exclude = ["test*"]  # Exclude test packages
include = ["atac_rna_data_processing*"]  # Only include packages starting with "atac_rna_data_processing"

[tool.setuptools.package-data]
"atac_rna_data_processing" = ["data/*.pkl", "data/gencode.v40.hg38.feather"]
